--- a/arenafighter/templates/store.html
+++ b/arenafighter/templates/store.html
@@ -4,19 +4,70 @@ Well, hello there, stranger! Welcome to the shop.
 <br/><br/><br/>
 If yer in the mood to make some coin, you can always <a href="{% url 'sell_detail' %}">SELL</a> some items from your inventory.
 <p>ITEMS:</p>
-{% for potion in potions %}
-** <a href="{% url 'store_item_detail' potion.id %}">{{ potions.0 }}</a><br/>
-{% endfor %}
+<table border="1px">
+    <tr>
+        <td>POTION NAME</td>
+        <td>PURCHASE VALUE</td>
+        <td></td>
+    </tr>
+    {% for potion in potions %}
+    <tr>
+        <td>** <a href="{% url 'store_item_detail' potion.id %}">{{ potions.0 }}</a></td>
+        <td><center>{{potion.buy_value}}</center></td>
+        <td><form action="{% url 'purchase_potion' potion.id%}" method="post">
+            {% csrf_token %}
+            <input type="hidden" value="{{item.id}}" name="item_id"/>
+            <input type="hidden" value="purchase" name="purchase"/>
+            <input type="submit" value="Purchase"/>
+            </form>
+        </td>
+    </tr>
+    {% endfor %}
+</table>
 <br/>
 <p>WEAPONS:</p>
+<table border="1px">
+    <tr>
+        <td>WEAPON NAME</td>
+        <td>PURCHASE VALUE</td>
+        <td></td>
+    </tr>
 {% for weapon in weapons %}
-** <a href="{% url 'store_weapon_detail' weapon.id %}">{{ weapon }}</a><br/>
+    <tr>
+        <td>** <a href="{% url 'store_weapon_detail' weapon.id %}">{{ weapon }}</a></td>
+        <td><center>{{ weapon.buy_value }}</center></td>
+        <td><form action="{% url 'purchase_weapon' weapon.id%}" method="post">
+            {% csrf_token %}
+            <input type="hidden" value="{{ weapon.id }}" name="item_id"/>
+            <input type="hidden" value="purchase" name="purchase"/>
+            <input type="submit" value="Purchase"/>
+            </form>
+        </td>
+    </tr>
 {% endfor %}
+</table>
 <br/>
+
+
 <p>ARMORS:</p>
+<table border="1px">
+    <tr>
+        <td>POTION NAME</td>
+        <td>PURCHASE VALUE</td>
+        <td></td>
+    </tr>
 {% for armor in armors %}
-** <a href="{% url 'store_armor_detail' armor.id %}">{{ armor }}</a><br/>
+    <tr>
+        <td>** <a href="{% url 'store_armor_detail' armor.id %}">{{ armor }}</a><br/></td>
+        <td><center>{{ armor.buy_value }}</center></td>
+        <td><form action="{% url 'purchase_armor' armor.id%}" method="post">
+            {% csrf_token %}
+            <input type="hidden" value="{{ armor.id }}" name="item_id"/>
+            <input type="hidden" value="purchase" name="purchase"/>
+            <input type="submit" value="Purchase"/>
+            </form>
+        </td>
+    </tr>
 {% endfor %}
-
-
+</table>
 {% endblock %}
