--- a/arenafighter/templates/item.html
+++ b/arenafighter/templates/item.html
@@ -69,8 +69,32 @@
 <a href="{% url 'sell_item' item.type item.id %}">Sell</a>
 {% endif %}
 
+{% if not store and item.type != "potion" %}
+
+    {% if item.type == "armor" %}
+    <form action="{% url 'equip_armor' item.id %}" method="post">
+    {% elif item.type  == "weapon" %}
+    <form action="{% url 'equip_weapon' item.id %}" method="post">
+    {% endif %}
+        {% csrf_token %}
+        <input type="hidden" value="{{item.id}}" name="item_id"/>
+        <input type="hidden" value="purchase" name="purchase"/>
+        <input type="submit" value="Equip"/>
+    </form>
+
+    {% if item.type == "armor" %}
+    <form action="{% url 'unequip_armor' item.id %}" method="post">
+    {% elif item.type  == "weapon" %}
+    <form action="{% url 'unequip_weapon' item.id %}" method="post">
+    {% endif %}
+        {% csrf_token %}
+        <input type="hidden" value="{{item.id}}" name="item_id"/>
+        <input type="hidden" value="purchase" name="purchase"/>
+        <input type="submit" value="Un-Equip"/>
+    </form>
 
 
+{% endif %}
 
 {% endblock %}
 
