--- a/arenafighter/templates/store.html
+++ b/arenafighter/templates/store.html
@@ -3,7 +3,8 @@
 Well, hello there, stranger! Welcome to the shop.
 <br/><br/><br/>
 If yer in the mood to make some coin, you can always <a href="{% url 'sell_detail' %}">SELL</a> some items from your inventory.
-<p>ITEMS:</p>
+<br/>
+<br/>
 <table border="1px">
     <tr>
         <td>POTION NAME</td>
@@ -25,7 +26,6 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     {% endfor %}
 </table>
 <br/>
-<p>WEAPONS:</p>
 <table border="1px">
     <tr>
         <td>WEAPON NAME</td>
@@ -48,11 +48,9 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
 </table>
 <br/>
 
-
-<p>ARMORS:</p>
 <table border="1px">
     <tr>
-        <td>POTION NAME</td>
+        <td>ARMOR NAME</td>
         <td>PURCHASE VALUE</td>
         <td></td>
     </tr>
