better combat system!!

--- a/arenafighter/templates/fight_round.html
+++ b/arenafighter/templates/fight_round.html
@@ -18,9 +18,8 @@ You have: {{ user.profile.current_character.current_hp }}/{{ user.profile.curren
 
 {{ message }}
 <br/><br/>
-<form action="" method="post">{% csrf_token %}
-<input type="hidden" name="keep_fighting" value="True" />
-<input type="hidden" value="{{ enemy_id }}" name="enemy_id"/>
+<form action="{% url 'attack' %}" method="post">{% csrf_token %}
+<input type="hidden" value="{{ enemy.id }}" name="enemy_id"/>
 <input type="submit" value="KEEP FIGHTIN', BITCH!"/>
 </form>
 <form action="{% url 'player_info' user.profile.current_character_id %}" method="get">{% csrf_token %}
