--- a/arenafighter/templates/fight.html
+++ b/arenafighter/templates/fight.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 
-You're fighting: {{ enemy }}
+GOOD JOB, MATE!<br/>
+I didn't think you had it in you, but you beat that fella pretty good.
 <br/><br/><br/>
 {{ message }}
 <br/><br/><br/>
