adding a model field and gettings ome ugly css set up

--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -1,6 +1,9 @@
+{% load staticfiles %}
 <html>
 
-<head></head>
+<head>
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css"/>
+</head>
 <title>{% block title %}Josh's ARENA FIGHTER{% endblock %}
 </title>
 <body>
