--- a/arenafighter/templates/info.html
+++ b/arenafighter/templates/info.html
@@ -8,7 +8,7 @@
 {% if message %}
     {{ message }}
 {% endif %}
-<table border="1px">
+<table>
     <tr>
         <td>NAME</td>
         <td>{{ character.name }}</td>
