--- a/arenafighter/templates/store.html
+++ b/arenafighter/templates/store.html
@@ -5,7 +5,7 @@ Well, hello there, stranger! Welcome to the shop.
 If yer in the mood to make some coin, you can always <a href="{% url 'sell_detail' %}">SELL</a> some items from your inventory.
 <br/>
 <br/>
-<table border="1px">
+<table>
     <tr>
         <td>POTION NAME</td>
         <td>PURCHASE VALUE</td>
@@ -26,7 +26,7 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     {% endfor %}
 </table>
 <br/>
-<table border="1px">
+<table>
     <tr>
         <td>WEAPON NAME</td>
         <td>PURCHASE VALUE</td>
@@ -48,7 +48,7 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
 </table>
 <br/>
 
-<table border="1px">
+<table>
     <tr>
         <td>ARMOR NAME</td>
         <td>PURCHASE VALUE</td>
