--- a/arenafighter/templates/home.html
+++ b/arenafighter/templates/home.html
@@ -13,7 +13,7 @@
 <p>Or create a new character</p>
 <form action="" method="post">{% csrf_token %}
 {{ form.name }}
-<input type="submit" value="Create New Character"/>
+<input type="submit" value="Create New Character" id="submit"/>
 </form>
 <br/>
 <br/>
