--- a/arenafighter/templates/signup.html
+++ b/arenafighter/templates/signup.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form action="" method="post">{% csrf_token %}
 {{ form.as_p }}
-<input type="submit" value="Sign Up!"/>
+<input type="submit" value="Sign Up!" id="submit"/>
 </form>
 {% endblock %}
 
