--- a/arenafighter/templates/character_sell_list.html
+++ b/arenafighter/templates/character_sell_list.html
@@ -3,6 +3,6 @@
 {% block content %}
 The following items are in your inventory to sell, boss.
 <p>
-{% include 'inventory_list.html' with character=character items=items sell=sell %}
+{% include 'partials/inventory_list.html' with character=character items=items sell=sell %}
 </p>
 {% endblock %}
