--- a/arenafighter/templates/base.html
+++ b/arenafighter/templates/base.html
@@ -7,43 +7,40 @@
 <title>{% block title %}Josh's ARENA FIGHTER{% endblock %}
 </title>
 <body>
-<p><center><h2>Welcome to Arena-Fighter! The lamest game you'll ever play! (not really)</h2></center></p>
+    <div id="nav">
+        {% block header_nav %}
+        <center>
+            {% if user.is_authenticated %}
+                {% with character_id=user.profile.current_character_id %}
+                You are currently logged in as {{ user.username }}
+                <br/>
+                <a href="{% url 'home' %}">HOME</a>
+                {% if character_id %}
+                    | <a href="{% url 'player_info' character_id %}">CHARACTER INFO</a>
+                    | <a href="{% url 'arena' %}">TO BATTLE!!</a> |
+                    <a href="{% url 'store' %}">STORE</a>
+                {% endif %}
+                {% endwith %}
+                | <a href="{% url 'log_out' %}">LOGOUT</a>
+            {% endif %}
+        <br/>
+        </center>
+        {% endblock %}
+    </div>
 
 
+    <div style="width: 100%; top:15px;">
+        <br/><br/><br/>
+        <p><center><h2>Welcome to Arena-Fighter! The lamest game you'll ever play! (not really)</h2></center></p>
+    </div>
 
-{% block header_nav %}
-<center>
-{% if user.is_authenticated %}
-{% with character_id=user.profile.current_character_id %}
-You are currently logged in as {{ user.username }}
 <br/>
-<a href="{% url 'home' %}">HOME</a>
-
-    {% if character_id %}
-     | <a href="{% url 'player_info' character_id %}">CHARACTER INFO</a>
- | <a href="{% url 'arena' %}">TO BATTLE!!</a> |
-<a href="{% url 'store' %}">STORE</a>
-    {% endif %}
-{% endwith %}
-| <a href="{% url 'log_out' %}">LOGOUT</a>
-{% endif %}
-<br/>
-</center>
-{% endblock %}
-
-
-
-<br/>
-<div style="width: 100%">
-
     <div style="width:20%; float: right;">
     {% include 'partials/character_info_box.html' with character=user.profile.current_character %}
     </div>
     <div style="width:75%; float: left;">
     {% block content %}{% endblock %}
     </div>
-</div>
-
 </body>
 
 </html>
