--- a/arenafighter/templates/partials/character_info_box.html
+++ b/arenafighter/templates/partials/character_info_box.html
@@ -27,8 +27,8 @@
         <td>{{ character.gold }}</td>
     </tr>
     <tr>
-        <td>XP</td>
-        <td>{{ character.xp }}</td>
+        <td>XP / LEVELUP</td>
+        <td>{{ character.xp }}/{{ character.next_levelup }}</td>
     </tr>
     <tr>
         <td>FIGHTS WON</td>
