--- a/arenafighter/templates/store.html
+++ b/arenafighter/templates/store.html
@@ -13,7 +13,7 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     </tr>
     {% for potion in potions %}
     <tr>
-        <td>** <a href="{% url 'store_potion_detail' potion.id %}">{{ potion }}</a></td>
+        <td><a href="{% url 'store_potion_detail' potion.id %}">{{ potion }}</a></td>
         <td><center>{{potion.buy_value}}</center></td>
         <td><form action="{% url 'purchase_potion' potion.id %}" method="post">
             {% csrf_token %}
@@ -34,7 +34,7 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     </tr>
 {% for weapon in weapons %}
     <tr>
-        <td>** <a href="{% url 'store_weapon_detail' weapon.id %}">{{ weapon }}</a></td>
+        <td><a href="{% url 'store_weapon_detail' weapon.id %}">{{ weapon }}</a></td>
         <td><center>{{ weapon.buy_value }}</center></td>
         <td><form action="{% url 'purchase_weapon' weapon.id %}" method="post">
             {% csrf_token %}
@@ -56,7 +56,7 @@ If yer in the mood to make some coin, you can always <a href="{% url 'sell_detai
     </tr>
 {% for armor in armors %}
     <tr>
-        <td>** <a href="{% url 'store_armor_detail' armor.id %}">{{ armor }}</a><br/></td>
+        <td><a href="{% url 'store_armor_detail' armor.id %}">{{ armor }}</a><br/></td>
         <td><center>{{ armor.buy_value }}</center></td>
         <td><form action="{% url 'purchase_armor' armor.id %}" method="post">
             {% csrf_token %}
