upgrade to 1.9 for migrations!

--- a/arenafighter/templates/item.html
+++ b/arenafighter/templates/item.html
@@ -36,7 +36,7 @@
     </tr>
     {% endif %}
 
-    {% if item.defense_value %}
+    {% if item.attack_value %}
     <tr>
         <td>ATTACK VALUE</td>
         <td>{{ item.attack_value }}</td>
