Revert "upgrade to 1.9 for migrations!"
This reverts commit 5302f217b2ff0cb4e10987817214e5fcba29e34f.

--- a/arenafighter/templates/item.html
+++ b/arenafighter/templates/item.html
@@ -36,7 +36,7 @@
     </tr>
     {% endif %}
 
-    {% if item.attack_value %}
+    {% if item.defense_value %}
     <tr>
         <td>ATTACK VALUE</td>
         <td>{{ item.attack_value }}</td>
