--- a/arenafighter/templates/partials/character_info_box.html
+++ b/arenafighter/templates/partials/character_info_box.html
@@ -38,4 +38,8 @@
         <td>FIGHTS LOST</td>
         <td>{{ character.fights_lost }}</td>
     </tr>
+    <tr>
+        <td>CURRENT LOCATION</td>
+        <td>{{ character.location }}</td>
+    </tr>
 </table>
