--- a/arenafighter/templates/locations.html
+++ b/arenafighter/templates/locations.html
@@ -5,6 +5,6 @@
 
 <p>*Click a location to go to it*</p>
 {% for location in locations %}
-	{{ location }}<br/>
+	<a href="{% url 'area_detail' location.id %}">{{ location }}</a><br/>
 {% endfor %}
 {% endblock %}
