--- a/templates/sitehome.html
+++ b/templates/sitehome.html
@@ -1,1 +1,5 @@
-<html><body>{{ characters }}</body></html>
+<html><body>{{ characters }}
+
+<br/>
+<a href="{% url 'home' %}">ArenaFighter</a>
+</body></html>
