--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,13 @@
                 {% with character_id=user.profile.current_character_id %}
                 You are currently logged in as {{ user.username }}
                 <br/>
-                <a href="{% url 'home' %}">HOME</a>
+                <a href="{% url 'sitehome' %}">HOME |</a>
+                <a href="{% url 'home' %}">ARENAFIGHTER HOME</a>
                 {% if character_id %}
                     | <a href="{% url 'player_info' character_id %}">CHARACTER INFO</a>
-                    | <a href="{% url 'locations' %}">LOCATIONS</a> |
-                    | <a href="{% url 'arena' %}">TO BATTLE!!</a> |
-                    <a href="{% url 'store' %}">STORE</a>
+                    | <a href="{% url 'locations' %}">LOCATIONS</a>
+                    | <a href="{% url 'arena' %}">TO BATTLE!!</a>
+                    | <a href="{% url 'store' %}">STORE</a>
                 {% endif %}
                 {% endwith %}
                 | <a href="{% url 'log_out' %}">LOGOUT</a>
